# sipster

./: .gitignore  CMakeLists.txt  README.md
cmake/: armhf_toolchain.cmake
src/: CMakeLists.txt  base.cpp  log.cpp  sdp.cpp  sdp_headers.cpp  sdp_private.h  sip.cpp  sip_headers.cpp  sip_headers_private.h  sipster.cpp  utils.cpp  utils.h
src/sipster/: base.h  log.h  sdp.h  sdp_enums.h  sdp_headers.h  sip.h  sip_enums.h  sip_headers.h  sipster.h  utils.h
test/: CMakeLists.txt  ipa.cpp  test_sdp.cpp  test_sip.cpp  test_sipster.cpp  test_uv.cpp
