add_subdirectory(googletest-release-1.7.0)
include_directories(${PROJECT_SOURCE_DIR}/src ${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR} ${PROJECT_SOURCE_DIR}/deps/include)

add_executable(test_sipster test_sipster.cpp)
add_executable(test_sip test_sip.cpp)
add_executable(test_sdp test_sdp.cpp)
#add_executable(ipa ipa.cpp)
add_dependencies(test_sipster test_sipster)
add_dependencies(test_sip test_sip)
add_dependencies(test_sdp test_sdp)
add_test(test_sipster test_sipster)
add_test(test_sip test_sip)
add_test(test_sdp test_sdp)
target_link_libraries(test_sipster sipster gtest gtest_main)
target_link_libraries(test_sip sipster gtest gtest_main)
target_link_libraries(test_sdp sipster gtest gtest_main)
#target_link_libraries(ipa sipster)
